# leah-software

./: .gitignore  Cargo.toml  README.md  cert.pem  check_dependencies.sh  files.csv  files.json  key.pem  run.sh  run.txt
src/: main.rs  robots.txt  routing.rs  service.rs
src/css/: standard.css
src/html/: algemeen.html  birthday.html  christmas.html  cv.html  cv2.html  cv_en.html  index.html  joy.html  kerst.html  mood.html  portfolio.html  technisch.html  zakelijk.html
src/js/: countdown.js  kerst.js  mood.js  projectsLoader.js
src/routing/: response.rs
src/wasm/: kerst.wasm
