[package]
name = "michaeljoy"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true      # automatically strip symbols from the binary
opt-level = "s"   # optimize for size
lto = true        # enable link time optimization
codegen-units = 1 # maximize size reduction optimizations
panic = "abort"   # abort instead of unwinding the code on panic

[dependencies]
chrono = "0.4.31"
hyper = {version = "1.4", features = ["full"]}
hyper-rustls = "0.27"
rustls = { version = "0.23", features = ["tls12"] }
rustls-pemfile = "2"
tokio = {version = "1", features = ["full"]}
