[package]
name = "michaeljoy"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true      # automatically strip symbols from the binary
opt-level = "s"   # optimize for size
lto = true        # enable link time optimization
codegen-units = 1 # maximize size reduction optimizations
panic = "abort"   # abort instead of unwinding the code on panic

[dependencies]
chrono = "0.4"
http-body-util = "0.1"
hyper = {version = "1", features = ["server", "http1"]}
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"]}
rustls = { version = "0.23", features = ["tls12"] }
rustls-pemfile = "2.1.3"
tokio = {version = "1", features = ["macros", "fs", "io-util", "rt-multi-thread"]}
tokio-rustls = "0.26.0"
